[project]
name = "nightshift"
version = "0.1.0"
description = "B&R Food Services Night Shift Reports automation"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    # WeasyPrint 53+ requires Pango>=1.44, which isn't in AlmaLinux 8's
    # default repos (it ships 1.42). 52.5 is the last release that works
    # with Pango 1.38+ and is API-compatible with our usage (HTML.write_pdf).
    "weasyprint>=52,<53",
    "pypdf>=4.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nightshift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
